# gmpc

./: .gitattributes  .gitignore  README.md  index.html
tgp_synth_pipeline/: README.md  pyproject.toml
tgp_synth_pipeline/configs/: run.yaml
tgp_synth_pipeline/docs/: IMPLEMENTATION_NOTES.md
tgp_synth_pipeline/scripts/: orpheus_tts_infer.py
tgp_synth_pipeline/src/tgp_synth/: cli.py  config.py  io.py  llm.py  pipeline.py  prompts.py  schema.py  text_annotation.py  tts_orpheus.py  video_rag.py  video_synthesis.py
tgp_synth_pipeline/src/tgp_synth/backends/: __init__.py  base.py  latentsync.py  orpheus.py
tgp_synth_pipeline/src/tgp_synth/utils/: ffmpeg.py  hashing.py  json_utils.py  logging.py  paths.py  subprocess_utils.py
tgp_synth_pipeline/user_provided/: llm_caller.py  toolchain.yaml
